Add and document Unit and Lesson creates/updates
